11号完成的进度，完成了第一个轮播图，跟第一个总的导航

--- a/src/index.html
+++ b/src/index.html
@@ -7,67 +7,116 @@
     <link rel="stylesheet" type="text/css" href="css/index1.css" />
 </head>
 <body>
-    <div id="loginBar">
-        <div class="container clearfix">
-            <span>送货至 <strong>广东</strong></span>
-            <ul class='fr clearfix'>
-                <li><a href="#">
-                        <span>请登录</span>
-                    </a>
-                    <a href="#">
-                        <span>注册</span>
-                    </a>
-                </li>
-                <li><a href="#"><span>我的订单</span></a></li>
-                <li><a href="#"><span>我的1药网</span></a></li>
-                <li><a href="#"><span>帮助中心</span></a></li>
-                <li><a href="#"><span>400-007-0958</span></a></li>
-                <li><a href="#"><span>手机APP</span></a></li>
-            </ul>
-        </div>
-    </div>
-    <div id="loginNav">
-        <div class="container">
-            <img src="img/nav1.jpg"/>
-        </div>
-    </div>
-    <div id="nav">
-        <div class="container">
-            <div class="nav_t">
-                <i></i>
-                <div class="seek clearfix">
-                    <input type="text" placeholder='非布司它片'/><span></span>
-                    <ul>
-                        <li><a href="#">汇仁肾宝</a></li>
-                        <li><a href="#">益安宁丸</a></li>
-                        <li><a href="#">普乐安片</a></li>
-                        <li><a href="#">板蓝根</a></li>
-                        <li><a href="#">云南白药牙膏</a></li>
-                        <li><a href="#">洗鼻器</a></li>
-                        <li><a href="#">博士伦</a></li>
-                    </ul>
-                </div>
-                <i></i>
-                <span>购物车</span>
-            </div>
-            <div class="nav_b">
-                <h4>所有商品分类</h4>
+    <div id="header">
+        <div id="loginBar">
+            <div class="container clearfix">
+                <span>送货至 <strong>广东</strong></span>
                 <ul class='fr clearfix'>
-                    <li><a href="#">首页</a></li>
-                    <li><a href="#">家庭常备药</a></li>
-                    <li><a href="#">乙肝</a></li>
-                    <li><a href="#">滋补养生</a></li>
-                    <li><a href="#">阳痿早泄</a></li>
-                    <li><a href="#">高血压</a></li>
-                    <li><a href="#">儿童医药馆</a></li>
-                    <li><a href="#">中药抓药</a></li>
-                    <li><a href="#">商家海外购</a></li>
-                    <li><a href="#">掌上1药网</a></li>
+                    <li><a href="#">
+                            <span>请登录</span>
+                        </a>
+                        <a href="#">
+                            <span>注册</span>
+                        </a>
+                    </li>
+                    <li><a href="#"><span>我的订单</span></a></li>
+                    <li><a href="#"><span>我的1药网</span></a></li>
+                    <li><a href="#"><span>帮助中心</span></a></li>
+                    <li><a href="#"><span>400-007-0958</span></a></li>
+                    <li><a href="#"><span>手机APP</span></a></li>
                 </ul>
             </div>
         </div>
+        <div id="loginNav">
+            <div class="container">
+                <img src="img/nav1.jpg"/>
+            </div>
+        </div>
+        <div id="nav">
+            <div class="container">
+                <div class="nav_t">
+                    <i></i>
+                    <div class="seek clearfix">
+                        <input type="text" placeholder='非布司它片'/><span></span>
+                        <ul>
+                            <li><a href="#">汇仁肾宝</a></li>
+                            <li><a href="#">益安宁丸</a></li>
+                            <li><a href="#">普乐安片</a></li>
+                            <li><a href="#">板蓝根</a></li>
+                            <li><a href="#">云南白药牙膏</a></li>
+                            <li><a href="#">洗鼻器</a></li>
+                            <li><a href="#">博士伦</a></li>
+                        </ul>
+                    </div>
+                    <i></i>
+                    <span>购物车</span>
+                </div>
+                <div class="nav_b">
+                    <h4>所有商品分类</h4>
+                    <ul class='fr clearfix'>
+                        <li><a href="#">首页</a></li>
+                        <li><a href="#">家庭常备药</a></li>
+                        <li><a href="#">乙肝</a></li>
+                        <li><a href="#">滋补养生</a></li>
+                        <li><a href="#">阳痿早泄</a></li>
+                        <li><a href="#">高血压</a></li>
+                        <li><a href="#">儿童医药馆</a></li>
+                        <li><a href="#">中药抓药</a></li>
+                        <li><a href="#">商家海外购</a></li>
+                        <li><a href="#">掌上1药网</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
+    <div id="main">
+        <div class="container">
+            <div class="carousel clearfix">
+                <div class="carousel_l"></div>
+                <div class="carousel_c"></div>
+                <div class="carousel_r">
+                    <span>在线咨询</span>
+                    <span>医生问诊</span>
+                    <div class="office clearfix">
+                    </div>
+                    <i></i>
+                    <div class="fuwu clearfix">
+                        <span>优质服务</span>
+                        <span>公告</span>
+                        <ul class='clearfix'>
+                            <li>正品保障
+                                <img src="img/f1.png" />
+                            </li>
+                            <li>品牌授权
+                            <img src="img/f2.png" /></li>
+                            <li>药监认证
+                            <img src="img/f3.png" /></li>
+                            <li>满79包邮
+                            <img src="img/f4.png" /></li>
+                        </ul>
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="imgGoods">
+                <ul class='clearfix'>
+                    <li><a href="#"><img src="img/5.png"/></a></li>
+                    <li><a href="#"><img src="img/1.jpg"/></a></li>
+                    <li><a href="#"><img src="img/2.jpg"/></a></li>
+                    <li><a href="#"><img src="img/3.jpg"/></a></li>
+                    <li><a href="#"><img src="img/4.jpg"/></a></li>
+                </ul>
+            </div>
+            <div class="banner1">
+                <img src="img/banner1.jpg" />
+            </div>
+        </div>
+    </div>
+
     <script src="lib/jquery-3.2.1.js"></script>
+    <script src="js/carousel.js"></script>
+    <script src="js/commodity.js"></script>
     <script src="js/index.js"></script>
+    
 </body>
 </html>
