--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
     <div>
-        <p  id="mybuttom">click me</p>
+        <p  id="mybuttom">click me1</p>
     </div>
     <script type="text/javascript">
         var btn = document.getElementById("mybuttom");
 
         console.log(btn);
         btn.onclick = function() {
-            window.location.href = "https://xdragon.xiaopeng.com/app"
+            window.location.href = "xiaolong://"
         }
     </script>
 </html>
