--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <html>
+    <style>
+        #mybuttom {
+            font-size: 24;
+            width: 100;
+            height: 50;
+            background-color: red;
+            color: white;           
+        }
+    </style>
     <div>
-        <p  id="mybuttom">click me12</p>
+        <p  id="mybuttom">click me</p>
     </div>
     <script type="text/javascript">
         var btn = document.getElementById("mybuttom");
 
         console.log(btn);
         btn.onclick = function() {
-            window.location.href = "xiaolong://"
+            window.location.href = "https://xdragon.xiaopeng.com/app"
         }
     </script>
 </html>
