--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <html>
     <style>
-        #mybuttom {
-            font-size: 24;
-            width: 100;
-            height: 50;
+        #mybuttom, #mybuttom1 {
+            font-size: 40;
+            width: 300;
+            height: 60;
             background-color: red;
             color: white;           
         }
     </style>
     <div>
-        <p  id="mybuttom">click me</p>
+        <p  id="mybuttom">跳转到骁龙详情页</p>
+        <p  id="mybuttom1">跳转到骁龙新建客户页面</p>
     </div>
     <script type="text/javascript">
         var btn = document.getElementById("mybuttom");
+        var btn2 = document.getElementById("mybuttom1");
 
         console.log(btn);
         btn.onclick = function() {
-            window.location.href = "https://xdragon.xiaopeng.com/app"
+            window.location.href = "https://xdragon.xiaopeng.com/app?xiaolong://customerList/customerDetailSummary?leadId=00q56c295bd6bf78a9e&clientRecordCode=51070972-0f7e-11ec-9455-0242c0a00002"
+        }
+
+        btn2.onclick = function() {
+            window.location.href = "https://xdragon.xiaopeng.com/app?xiaolong://clue/checkDouble?mobile=13456789890"
         }
     </script>
 </html>
