--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         btn2.onclick = function() {
-            window.location.href = "https://xdragon.xiaopeng.com/app?xiaolong://clue/checkDouble?mobile=13456789890"
+            window.location.href = "https://xdragon.xiaopeng.com/app?xiaolong://clue/checkDouble?mobile=13456789890&wxUnionid=12342"
         }
     </script>
 </html>
