--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <style>
-        #mybuttom, #mybuttom1 {
+        #mybuttom, #mybuttom1, #mybuttom2 {
             font-size: 40;
             width: 300;
             height: 60;
@@ -28,7 +28,7 @@
         }
         
         btn3.onclick = function() {
-            window.location.href = "weixin://"
+            window.location.href = "wxwork://launch"
         }
     </script>
 </html>
