--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <style>
-        #mybuttom, #mybuttom1, #mybuttom2 {
+        #mybuttom, #mybuttom1, #mybuttom2， #mybuttom3 {
             font-size: 40;
             width: 300;
             height: 60;
@@ -12,11 +12,13 @@
         <p  id="mybuttom">跳转到骁龙详情页</p>
         <p  id="mybuttom1">跳转到骁龙新建客户页面</p>
         <p  id="mybuttom2">跳转到微信</p>
+        <p  id="mybuttom3">跳转到企微</p>
     </div>
     <script type="text/javascript">
         var btn = document.getElementById("mybuttom");
         var btn2 = document.getElementById("mybuttom1");
         var btn3 = document.getElementById("mybuttom2");
+        var btn4 = document.getElementById("mybuttom3");
 
         console.log(btn);
         btn.onclick = function() {
@@ -29,6 +31,10 @@
         
         btn3.onclick = function() {
             window.location.href = "wxwork://launch"
+        }
+        
+        btn4.onclick = function() {
+            window.location.href = "weixin://"
         }
     </script>
 </html>
