--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <style>
-        #mybuttom, #mybuttom1, #mybuttom2， #mybuttom3 {
+        #mybuttom, #mybuttom1, #mybuttom2, #mybuttom3 {
             font-size: 40;
             width: 300;
             height: 60;
