--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
         
          btn5.onclick = function() {
-            window.location.href = "alipay://"
+            window.location.href = "xiaolong://"
         }
     </script>
 </html>
