--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
         
         btn4.onclick = function() {
-            window.location.href = "wxwork://launch"
+            window.location.href = "wxwork://"
         }
         
          btn5.onclick = function() {
